<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Qoydalar">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2FE629"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">


            <ImageView
                android:id="@+id/orqagaBelgiQoshish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/todo" />


            <TextView
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:text="@string/yo_l_belgisi_qo_shish"
                android:textColor="@color/black"
                android:textSize="32sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:background="@color/white"
                android:id="@+id/rasim_qoy"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/galereya"
                android:contentDescription="@string/todo" />

            <TextView
                android:fontFamily="serif"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/yo_l_belgisining_rasmini_qo_shish_uchun_rasm_ustiga_bosing"
                android:textColor="#000000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                android:background="#E7E3E3">

                <EditText
                    android:id="@+id/yolNomi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="name"
                    android:hint="@string/yo_l_belgisining_nomi"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#E7E3E3">


                <EditText
                    android:id="@+id/yolToliqMalumot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:autofillHints="name"
                    android:hint="@string/yo_l_belgisini_to_liq_tarifi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#E7E3E3">

                <Spinner
                    android:id="@+id/spiner"
                    android:layout_width="240dp"
                    android:layout_height="50dp" />


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/saqlash"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#2FE629"
                app:cardCornerRadius="1dp"
                app:cardElevation="2dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/saqlash"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>